Add Authentication, Create, Put, Delete EndPoints

--- a/HotelListing/appsettings.json
+++ b/HotelListing/appsettings.json
@@ -8,5 +8,9 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=HotelListing;User Id=sa;Password=admin;"
+  },
+  "Jwt": {
+    "Issuer": "HotelListingAPI",
+    "lifetime":  15
   }
 }
